# GaussianInputAssistant

./: .gitignore  README.md  gaussian_input.py  input_keys.py  pyproject.toml
gaussian_input/: gaussian_input.py  gaussian_input_reader.py  input_keys.py
src/constants/: periodic_table.py
src/gaussian_input/: gaussian_input.py  gaussian_input_reader.py
src/gaussian_runner/: gaussian_runner.py
src/input_modifier/: __init__.py  calculation_methods.py  gaussian_geometry.py  gaussian_input.py  geometry.py  input_parameters.py  system_control.py
src/output_analyzer/: gaussian_output.py  output_parameters.py
src/utils/: file_util.py  list_util.py  logger.py  pygrep.py  string_util.py
test/: sample_input.gjf
