[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian_py_interface"
version = "0.1.0"
description = "A tool for reading, modifying and writing Gaussian input files, running Gaussian, and extracting results from Gaussian outputs."
authors = [
    { name="Jie J. Bao", email="baoxx138@umn.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "AGPL-NC" }
dependencies = []

[project.scripts]
gaussian_py_interface = "gaussian_py_interface:main"

[tool.setuptools.package-data]
gaussian_py_interface = ["src/*.py", "src/*/*.py"]
